2009-02-11 Ben Abbott <bpabbott@mac.com>

	* configure.in: Include FTGLTextureFont.h when FTGL_UPPER_CASE is
	not defined.

2009-02-11  John W. Eaton  <jwe@octave.org>

	* configure.in (octetcdir): New default value.
	* Makeconf.in (octetcdir): New variable.
	(do-subst-default-vals): Substitute octetcdir.
	* octMakefile.in (install, uninstall): Use $(octetcdir) for NEWS.
	(DIRS_TO_MAKE): Add $(octetcdir) to the list.

2009-02-10  Rafael Laboissiere  <rafael@debian.org>

	* examples/Makefile.in: Run some clean targets on sub-directory
	@polynomial.

2009-02-09  John W. Eaton  <jwe@octave.org>

	* examples/Makefile.in (dist): Create subdirs of examples, not scripts.

	* examples/@polynomial/Makefile.in (do-mkpkgadd):
	Provide special definition for this directory.

	* examples/Makefile.in (EXAMPLE_SOURCES): Delete unused variable.
	(SUBDIRS, DISTSUBDIRS): Don't reset to empty.

2009-02-08  John W. Eaton  <jwe@octave.org>

	* install-octave.in: Delete.
	* configure.in: Delete AC_CONFIG_COMMANDS macro that was used to
	make install-octave executable.

2009-02-07  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (all): Display $(prefix) in summary message.

2009-02-05  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_HDF5_HAS_REQUIRED_API): New macro.
	* configure.in: Use it in HDF5 check.

2009-02-04  Benjamin Lindner  <lindnerben@gmx.net>

	* configure.in: Use separate cases for *-*-mingw* and *-*-cygwin*
	to set variables related to creating shared libraries.

2009-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* aclocal.m4 (AC_CHECK_QHULL_OK): New macro, based on suggestion by
	Petr Mikulik <mikulik@physics.muni.cz>.
	* configure.in: Call it.

2009-02-01  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* autogen.sh: Remove printing of cvs motd.

2009-01-30  Marco Atzeri  <marco_atzeri@yahoo.it>

	* configure.in (SHLLIBPRE, SHLBINPRE): Fix definitions for Cygwin.
	(SHLEXT, SHLLIB, SHLBIN, SONAME_FLAGS): Fix definitions for Cygwin
	and MinGW.
